--- a/Version1/index.html
+++ b/Version1/index.html
@@ -9,7 +9,6 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link href="jquery/ui/jquery-ui.min.css" rel="stylesheet">
-    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
@@ -20,8 +19,7 @@
     <script src="jquery/ui/jquery-ui.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <!--script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js" charset="utf-8"></script-->
-    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js" charset="utf-8"></script>
 
 
     <title>FFI Options</title>
@@ -33,103 +31,205 @@
 
     <h1>FIRST FINANCE Institute: Black-Scholes and Greeks</h1>
 
-    <Blockquote>
-        Understanding how option pricing works!
-    </Blockquote>
+    <Blockquote>Understanding how option pricing works!</Blockquote>
 
-    <div class="col-xs-4">
+    <div class="col-xs-7">
 
-        <div class="panel panel-primary">
+            <div name="divParameters" class="panel panel-primary">
 
-            <div class="panel-heading">
+                <div class="panel-heading">
 
-                <h3 class="panel-title">Parameters</h3>
+                    <h3 class="panel-title">Parameters</h3>
 
-            </div>
-
-            <div class="panel-body">
-
-                <form role="form">
-
-                    <div class="form-group">
-                        <label class="parameters">Stock Price (S): </label>
-                        <div id="stock"></div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="parameters">Strike Price (K): </label>
-                        <div id="strike"></div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="parameters">Risk-Free Rate (r): </label>
-                        <div id="risk"></div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="parameters">Annual Dividend Yield (q): </label>
-                        <div id="dividend"></div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="parameters">Time to Maturity (T-t): </label>
-                        <div id="maturity"></div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="parameters">Volatility (): </label>
-                        <div id="volatility"></div>
-                    </div>
-
-                </form>
-
-            </div>
-
-            <div>
-                <button type="button" class="btn btn-primary">
-                    Reset
-                </button>
-            </div>
-
-        </div>
-
-    </div>
-
-    <div class="col-xs-8">
-
-        <div class="panel panel-primary">
-            <div class="panel-heading">
-                <div class="btn-group" role="group">
-                    <button type="button" class="btn btn-primary">Value</button>
-                    <button type="button" class="btn btn-primary">Delta</button>
-                    <button type="button" class="btn btn-primary">Gamma</button>
-                    <button type="button" class="btn btn-primary">Vega</button>
-                    <button type="button" class="btn btn-primary">Rho</button>
                 </div>
-            </div>
-            <div class="panel-body">
+
+                <div class="panel-body">
+
+                    <form class="col-xs-6" role="form">
+
+                        <div class="form-group">
+                            <label id="Stock">Stock Price (S) = <span></span> $</label>
+                            <div id="sliderStock"></div>
+                        </div>
+
+                        <div class="form-group">
+                            <label id="Risk">Risk-Free Rate (r) = <span></span>%</label>
+                            <div id="sliderRisk"></div>
+                        </div>
+
+                        <div class="form-group">
+                            <label id="Maturity">Time to Maturity (τ) = <span></span> Days</label>
+                            <div id="sliderMaturity"></div>
+                        </div>
+
+                    </form>
+
+                    <form class="col-xs-6" role="form">
+
+                        <div class="form-group">
+                            <label id="Strike">Strike Price (K) = <span></span> $</label>
+                            <div id="sliderStrike"></div>
+                        </div>
+
+                        <div class="form-group">
+                            <label id="Dividend">Annual Dividend Yield (q) = <span></span>%</label>
+                            <div id="sliderDividend"></div>
+                        </div>
+
+                        <div class="form-group">
+                            <label id="Volatility">Volatility (σ) = <span></span>%</label>
+                            <div id="sliderVolatility"></div>
+                        </div>
+
+                    </form>
+
+                    <div>
+                        <button id="btnReset"  type="reset" class="btn btn-primary" style="float: right;">
+                            Reset
+                        </button>
+                    </div>
+
+                </div>
 
             </div>
-        </div>
+
+            <div name="divPrices" class="panel panel-primary">
+
+                <div class="panel-heading">
+
+                        <h3 class="panel-title">Prices</h3>
+
+                </div>
+
+                <div  id="prices" class="panel-body">
+
+                    <div>
+
+                        <form class="col-xs-6" role="form">
+
+                            <h4 class="putCall" >Call</h4>
+
+                            <div class="form-group">
+                                <label id="callPremium">Premium = <span></span> $</label>
+                            </div>
+
+                            <div class="form-group">
+                                <label id="callPremiumPct">Premium (%) = <span></span>%</label>
+                            </div>
+
+                            <div class="form-group">
+                                <label id="callDelta">Delta = <span></span></label>
+                            </div>
+
+                            <div class="form-group">
+                                <label id="callRho">Rho = <span></span></label>
+                            </div>
+
+                            <hr>
+
+                            <div class="form-group">
+                                <label id="Drift">Drift = <span></span>%</label>
+                            </div>
+
+                            <div class="form-group">
+                                <label id="Gamma">Gamma = <span></span></label>
+                            </div>
+
+                        </form>
+
+                        <form class="col-xs-6" role="form">
+
+                            <h4 class="putCall">Put</h4>
+
+                            <div class="form-group">
+                                <label id="putPremium">Premium = <span></span> $</label>
+                            </div>
+
+                            <div class="form-group">
+                                <label id="putPremiumPct">Premium (%) = <span></span>%</label>
+                            </div>
+
+                            <div class="form-group">
+                                <label id="putDelta">Delta = <span></span></label>
+                            </div>
+
+                            <div class="form-group">
+                                <label id="putRho">Rho = <span></span></label>
+                            </div>
+
+                            <hr>
+
+                            <div class="form-group">
+                                <label id="Forward">Forward = <span></span> $</label>
+                            </div>
+
+                            <div class="form-group">
+                                <label id="Vega">Vega = <span></span></label>
+                            </div>
+
+                        </form>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div name="divScenario" class="panel panel-primary">
+
+                <div class="panel-heading">
+
+                    <h3 class="panel-title">Scenarios</h3>
+
+                    <!--div class="btn-group" role="group">
+                        <button id="btnValue" type="button" class="btn btn-primary">Value</button>
+                        <button id="btnDelta" type="button" class="btn btn-primary">Delta</button>
+                        <button id="btnGamma" type="button" class="btn btn-primary">Gamma</button>
+                        <button id="btnVega" type="button" class="btn btn-primary">Vega</button>
+                        <button id="btnRho" type="button" class="btn btn-primary">Rho</button>
+                    </div-->
+
+                </div>
+
+                <div class="panel-body">
+
+                </div>
+
+            </div>
+
     </div>
 
-    <div class="col-xs-8">
-        <div class="panel panel-primary">
+    <div class="col-xs-5">
+
+            <div name="divGraphs" class="panel panel-primary">
+
             <div class="panel-heading">
-                <h3 class="panel-title">Prices</h3>
+                <h3 class="panel-title">Graphs</h3>
             </div>
+
             <div class="panel-body">
 
+                <div id="mainGraph"></div>
+
+                <div id="deltaGraph"></div>
+
+                <div id="gammaGraph"></div>
+
+                <div id="vegaGraph"></div>
+
+                <div id="rhoGraph"></div>
+
             </div>
+
         </div>
+
     </div>
 
 </div>
 
 
-
-
-<script src="./scripts/index.js"></script>
+<!--script src="./scripts/formulesV1.js"></script-->
+<script src="./scripts/indexcopy.js"></script>
 
 </body>
 </html>
