--- a/Version1/indexcopy.html
+++ b/Version1/indexcopy.html
@@ -31,13 +31,11 @@
 
     <h1>FIRST FINANCE Institute: Black-Scholes and Greeks</h1>
 
-    <Blockquote>
-        Understanding how option pricing works!
-    </Blockquote>
+    <Blockquote>Understanding how option pricing works!</Blockquote>
 
-    <div class="col-xs-7">
+    <div class="col-xs-6">
 
-            <div class="panel panel-primary">
+            <div name="divParameters" class="panel panel-primary">
 
                 <div class="panel-heading">
 
@@ -60,7 +58,7 @@
                         </div>
 
                         <div class="form-group">
-                            <label id="Maturity">Time to Maturity (τ) = <span></span></label>
+                            <label id="Maturity">Time to Maturity (τ) = <span></span> Days</label>
                             <div id="sliderMaturity"></div>
                         </div>
 
@@ -95,7 +93,7 @@
 
             </div>
 
-            <div class="panel panel-primary">
+            <div name="divPrices" class="panel panel-primary">
 
                 <div class="panel-heading">
 
@@ -158,17 +156,39 @@
 
             </div>
 
+            <div name="divScenario" class="panel panel-primary">
+
+                <div class="panel-heading">
+
+                    <h3 class="panel-title">Scenarios</h3>
+
+                    <!--div class="btn-group" role="group">
+                        <button id="btnValue" type="button" class="btn btn-primary">Value</button>
+                        <button id="btnDelta" type="button" class="btn btn-primary">Delta</button>
+                        <button id="btnGamma" type="button" class="btn btn-primary">Gamma</button>
+                        <button id="btnVega" type="button" class="btn btn-primary">Vega</button>
+                        <button id="btnRho" type="button" class="btn btn-primary">Rho</button>
+                    </div-->
+
+                </div>
+
+                <div class="panel-body">
+
+                </div>
+
+            </div>
+
     </div>
 
-    <div class="col-xs-5">
+    <div class="col-xs-6">
 
-        <div class="panel panel-primary">
+            <div name="divGraphs" class="panel panel-primary">
 
             <div class="panel-heading">
                 <h3 class="panel-title">Graphs</h3>
             </div>
 
-            <div  id="allGraphs" class="panel-body">
+            <div class="panel-body">
 
                 <div id="mainGraph"></div>
 
@@ -186,30 +206,11 @@
 
     </div>
 
-    <div class="col-xs-7">
-
-        <div class="panel panel-primary">
-            <div class="panel-heading">
-                <div class="btn-group" role="group">
-                    <button id="btnValue" type="button" class="btn btn-primary">Value</button>
-                    <button id="btnDelta" type="button" class="btn btn-primary">Delta</button>
-                    <button id="btnGamma" type="button" class="btn btn-primary">Gamma</button>
-                    <button id="btnVega" type="button" class="btn btn-primary">Vega</button>
-                    <button id="btnRho" type="button" class="btn btn-primary">Rho</button>
-                </div>
-            </div>
-            <div id="selectGraphs" class="panel-body">
-
-            </div>
-        </div>
-
-    </div>
-
 </div>
 
 
 <!--script src="./scripts/formulesV1.js"></script-->
-<script src="./scripts/index.js"></script>
+<script src="./scripts/indexcopy.js"></script>
 
 </body>
 </html>
