Rejected commit: Default

--- a/Version1/indexcopy.html
+++ b/Version1/indexcopy.html
@@ -47,7 +47,7 @@
 
                     <form class="col-xs-6" role="form">
 
-                        <div class="form-group">
+                        <div class="form-group" style="float: right">
                             <label id="Stock">Stock Price (S) = <span></span> $</label>
                             <div id="sliderStock"></div>
                         </div>
@@ -105,7 +105,7 @@
 
                     <div>
 
-                        <form class="col-xs-6" role="form">
+                        <form class="col-xs-6 " role="form">
 
                             <div class="form-group">
                                 <label id="Drift">Drift = <span></span>%</label>
