--- a/Version1/index.html
+++ b/Version1/index.html
@@ -25,7 +25,7 @@
     <title>FFI Options</title>
 
 </head>
-<body>
+<body style="">
 
 <div class="container">
 
@@ -115,15 +115,15 @@
                             <tbody>
 
                                 <tr>
-                                    <td style="font-weight: bold">Forward</td>
-                                    <td id="Forward" style="text-align: right"><span></span> $</td>
+                                    <td style="font-weight: bold">Drift</td>
+                                    <td id="Drift" style="text-align: right"><span></span>%</td>
                                     <td></td>
                                     <td></td>
                                 </tr>
 
                                 <tr>
-                                    <td style="font-weight: bold">Drift</td>
-                                    <td id="Drift" style="text-align: right"><span></span>%</td>
+                                    <td style="font-weight: bold">Forward</td>
+                                    <td id="Forward" style="text-align: right"><span></span> $</td>
                                     <td></td>
                                     <td></td>
                                 </tr>
@@ -187,60 +187,6 @@
 
                     </div>
 
-                            <!--div class="form-group pull-right">
-                                <label id="callPremium">Premium = <span></span> $</label>
-                            </div>
-
-                            <div class="form-group">
-                                <label id="callPremiumPct">Premium (%) = <span></span>%</label>
-                            </div>
-
-                            <div class="form-group">
-                                <label id="callDelta">Delta = <span></span></label>
-                            </div>
-
-                            <div class="form-group">
-                                <label id="callRho">Rho = <span></span></label>
-                            </div>
-
-                            <hr>
-
-                            <div class="form-group">
-                                <label id="Drift">Drift = <span></span>%</label>
-                            </div>
-
-                            <div class="form-group">
-                                <label id="Gamma">Gamma = <span></span></label>
-                            </div-->
-
-
-
-                            <!--div class="form-group">
-                                <label id="putPremium">Premium = <span></span> $</label>
-                            </div>
-
-                            <div class="form-group">
-                                <label id="putPremiumPct">Premium (%) = <span></span>%</label>
-                            </div>
-
-                            <div class="form-group">
-                                <label id="putDelta">Delta = <span></span></label>
-                            </div>
-
-                            <div class="form-group">
-                                <label id="putRho">Rho = <span></span></label>
-                            </div>
-
-                            <hr>
-
-                            <div class="form-group">
-                                <label id="Forward">Forward = <span></span> $</label>
-                            </div>
-
-                            <div class="form-group">
-                                <label id="Vega">Vega = <span></span></label>
-                            </div-->
-
                 </div>
 
             </div>
@@ -251,17 +197,90 @@
 
                     <h3 class="panel-title">Scenarios</h3>
 
-                    <!--div class="btn-group" role="group">
-                        <button id="btnValue" type="button" class="btn btn-primary">Value</button>
-                        <button id="btnDelta" type="button" class="btn btn-primary">Delta</button>
-                        <button id="btnGamma" type="button" class="btn btn-primary">Gamma</button>
-                        <button id="btnVega" type="button" class="btn btn-primary">Vega</button>
-                        <button id="btnRho" type="button" class="btn btn-primary">Rho</button>
-                    </div-->
-
                 </div>
 
                 <div class="panel-body">
+
+                    <div class="row">
+
+                        <div class="col-sm-6 col-md-6">
+                            <div class="thumbnail">
+                                <img src="./styles/images/shutterstock/banknotes.jpg" alt="...">
+                                <div class="caption">
+                                    <h3>Forward</h3>
+                                    <!--p>What is the Forward? How does it work? Why would you want to know about it? Grasp the very basics of the markets.</p-->
+                                    <p><a id="audioForward" class="btn btn-primary" style="display: block">
+                                        Listen <span class="glyphicon glyphicon-headphones"></span>
+                                    </a></p>
+                                    <div id="playerForward">
+                                        <audio controls>
+                                            <source src="http://www.w3schools.com/html/horse.mp3" type="audio/mpeg" />
+                                        </audio>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-sm-6 col-md-6">
+                            <div class="thumbnail">
+                                <img src="./styles/images/shutterstock/graphs-and-charts-istock_000016153431small.jpg" alt="...">
+                                <div class="caption">
+                                    <h3>Volatility</h3>
+                                    <!--p>Prediction, speculation, or logical insinuation? Your knowledge of Volatility will determine which one of the three you practise.
+                                    </p-->
+                                    <p><a id="audioVolatility" class="btn btn-primary" style="display: block">
+                                        Listen <span class="glyphicon glyphicon-headphones"></span>
+                                    </a></p>
+                                    <div id="playerVolatility">
+                                        <audio controls>
+                                            <source src="http://www.w3schools.com/html/horse.mp3" type="audio/mpeg" />
+                                        </audio>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="row">
+
+                        <div class="col-sm-6 col-md-6">
+                            <div class="thumbnail">
+                                <img src="./styles/images/stock-market-stockrockandroll.jpg">
+                                <div class="caption">
+                                    <h3>Rates</h3>
+                                    <!--p>Understanding the mechanisms of Rates will give you the edge you need to become a stand-out marketer.</p-->
+                                    <p><a id="audioRates" class="btn btn-primary" style="display: block">
+                                        Listen <span class="glyphicon glyphicon-headphones"></span>
+                                    </a></p>
+                                    <div id="playerRates">
+                                        <audio controls>
+                                            <source src="http://www.w3schools.com/html/horse.mp3" type="audio/mpeg" />
+                                        </audio>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-sm-6 col-md-6">
+                            <div class="thumbnail">
+                                <img src="./styles/images/Working-across-time-zones2.jpg" alt="...">
+                                <div class="caption">
+                                    <h3>Time</h3>
+                                    <!--p>How does Time affect the pricing of an Option? </p-->
+                                    <p><a id="audioTime" class="btn btn-primary" style="display: block">
+                                        Listen <span class="glyphicon glyphicon-headphones"></span>
+                                    </a></p>
+                                    <div id="playerTime">
+                                        <audio controls>
+                                            <source src="http://www.w3schools.com/html/horse.mp3" type="audio/mpeg" />
+                                        </audio>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
 
                 </div>
 
@@ -271,10 +290,14 @@
 
     <div class="col-xs-6">
 
-            <div id="divGraphs" class="panel panel-primary" style="display: block">
+        <div id="divGraphs" class="panel panel-primary">
 
             <div class="panel-heading">
+
+                <p class="pull-right"><input id="displayForward" type="checkbox" value=""> Forward</p>
+
                 <h3 class="panel-title">Graphs</h3>
+
             </div>
 
             <div id="allGraphs" class="panel-body">
@@ -283,10 +306,54 @@
 
         </div>
 
+        <div name="divFFI" class="panel panel-primary" style="height: 270px">
+
+            <div class="panel-heading">
+                <h3 class="panel-title">About us</h3>
+            </div>
+
+            <div class="panel-body">
+
+                <div id="FFICarousel" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#FFICarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#FFICarousel" data-slide-to="1"></li>
+                        <li data-target="#FFICarousel" data-slide-to="2"></li>
+                        <li data-target="#FFICarousel" data-slide-to="3"></li>
+                        <li data-target="#FFICarousel" data-slide-to="4"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="item active">
+                            <img src="./styles/images/HIresImagesFirstFinance/shutterstock_208217650.jpg" alt="First slide" class="picture" width="305">
+                            <div class="carousel-caption">
+                                <h3>First Finance Institute</h3>
+                                <p>"<em>We deliver innovative online-based education programs"</em></p>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img src="./styles/images/HIresImagesFirstFinance/shutterstock_237354595.jpg" alt="Second slide" class="picture" width="305">
+                        </div>
+                        <div class="item">
+                            <img src="./styles/images/HIresImagesFirstFinance/shutterstock_147963821.jpg" alt="Third slide" class="picture" width="310">
+                        </div>
+                    </div>
+                    <a class="left carousel-control" href="#FFICarousel" data-role="button" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="right carousel-control" href="#FFICarousel" data-role="button" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+
+            </div>
+
+        </div>
+
     </div>
 
 </div>
-
 
 <!--script src="./scripts/formulesV1.js"></script-->
 <script src="./scripts/indexcopy.js"></script>
