--- a/Version1/indexcopy.html
+++ b/Version1/indexcopy.html
@@ -210,7 +210,7 @@
 
 
 <!--script src="./scripts/formulesV1.js"></script-->
-<script src="./scripts/indexcopy.js"></script>
+<script src="./scripts/index.js"></script>
 
 </body>
 </html>
