--- a/Version1/index.html
+++ b/Version1/index.html
@@ -35,7 +35,7 @@
 
     <div class="col-xs-6">
 
-            <div name="divParameters" class="panel panel-primary" style="display: block">
+        <div name="divParameters" class="panel panel-primary" style="display: block">
 
                 <div class="panel-heading">
 
@@ -60,7 +60,7 @@
                         </div>
 
                         <div class="form-group">
-                            <label id="Maturity">Time to Maturity (τ) = <span></span> Days</label>
+                            <label id="Maturity">Time to Maturity (τ) = <span></span> Years</label>
                             <div id="sliderMaturity"></div>
                         </div>
 
@@ -89,7 +89,7 @@
 
             </div>
 
-            <div name="divPrices" class="panel panel-primary" style="display: block">
+        <div name="divPrices" class="panel panel-primary" style="display: block">
 
                 <div class="panel-heading">
 
@@ -101,7 +101,7 @@
 
                     <div>
 
-                        <table class="table table-hover">
+                        <table class="table table-hover table-condensed">
 
                             <thead>
 
@@ -191,7 +191,7 @@
 
             </div>
 
-            <div name="divScenario" class="panel panel-primary" style="display: block">
+        <div name="divScenario" class="panel panel-primary" style="display: block">
 
                 <div class="panel-heading">
 
@@ -294,7 +294,7 @@
 
             <div class="panel-heading">
 
-                <p class="pull-right"><input id="displayForward" type="checkbox" value=""> Forward</p>
+                <label class="pull-right" style="font-weight: normal"><input id="displayForward" type="checkbox" value=""> Forward</label>
 
                 <h3 class="panel-title">Graphs</h3>
 
@@ -356,7 +356,7 @@
 </div>
 
 <!--script src="./scripts/formulesV1.js"></script-->
-<script src="./scripts/indexcopy.js"></script>
+<script src="./scripts/index.js"></script>
 
 </body>
 </html>
