--- a/Version1/index.html
+++ b/Version1/index.html
@@ -21,7 +21,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js" charset="utf-8"></script>
 
-
     <title>FFI Options</title>
 
 </head>
@@ -294,7 +293,11 @@
 
             <div class="panel-heading">
 
-                <label class="pull-right" style="font-weight: normal"><input id="displayForward" type="checkbox" value=""> Forward</label>
+                <div class="row pull-right">
+                            <span class=""><label style="font-weight: normal"><input id="displaySpot" type="checkbox" value="checked"> Spot</label></span>
+                            <span><label style="font-weight: normal"><input id="displayForward" type="checkbox" value=""> Forward</label></span>
+                            <span><label style="font-weight: normal"><input id="displayStrike" type="checkbox" value=""> Strike</label></span>
+                </div>
 
                 <h3 class="panel-title">Graphs</h3>
 
