Rejected commit: Default

--- a/Version1/index.html
+++ b/Version1/index.html
@@ -295,8 +295,8 @@
 
                 <div class="row pull-right">
                             <span class="displayInput"><label style="font-weight: normal"><input id="displaySpot" type="checkbox" checked> Spot</label></span>
-                            <span class="displayInput"><label style="font-weight: normal"><input id="displayForward" type="checkbox" value=""> Forward</label></span>
-                            <span class="displayInput"><label style="font-weight: normal"><input id="displayStrike" type="checkbox" checked> Strike</label></span>
+                            <span class="displayInput"><label style="font-weight: normal"><input id="displayForward" type="checkbox"> Forward</label></span>
+                            <span class="displayInput"><label style="font-weight: normal"><input id="displayStrike" type="checkbox"> Strike</label></span>
                 </div>
 
                 <h3 class="panel-title">Graphs <span>(Call)</span></h3>
