Rejected commit: Default

--- a/Version1/index.html
+++ b/Version1/index.html
@@ -49,17 +49,17 @@
                     <form class="col-xs-6" role="form">
 
                         <div class="form-group">
-                            <label id="Stock">Stock Price (S) = <span></span> $</label>
+                            <label id="Stock">Stock Price (S) = <span>100</span> $</label>
                             <div id="sliderStock"></div>
                         </div>
 
                         <div class="form-group">
-                            <label id="Risk">Risk-Free Rate (r) = <span></span>%</label>
+                            <label id="Risk">Risk-Free Rate (r) = <span>0.0</span>%</label>
                             <div id="sliderRisk"></div>
                         </div>
 
                         <div class="form-group">
-                            <label id="Maturity">Time to Maturity (τ) = <span></span> Years</label>
+                            <label id="Maturity">Time to Maturity (τ) = <span>2.5</span> Years</label>
                             <div id="sliderMaturity"></div>
                         </div>
 
@@ -68,17 +68,17 @@
                     <form class="col-xs-6" role="form">
 
                         <div class="form-group">
-                            <label id="Strike">Strike Price (K) = <span></span> $</label>
+                            <label id="Strike">Strike Price (K) = <span>100</span> $</label>
                             <div id="sliderStrike"></div>
                         </div>
 
                         <div class="form-group">
-                            <label id="Dividend">Annual Dividend Yield (q) = <span></span>%</label>
+                            <label id="Dividend">Annual Dividend Yield (q) = <span>0.0</span>%</label>
                             <div id="sliderDividend"></div>
                         </div>
 
                         <div class="form-group">
-                            <label id="Volatility">Volatility (σ) = <span></span>%</label>
+                            <label id="Volatility">Volatility (σ) = <span>40</span>%</label>
                             <div id="sliderVolatility"></div>
                         </div>
 
@@ -283,7 +283,7 @@
 
                 </div>
 
-            </div>
+        </div>
 
     </div>
 
@@ -323,21 +323,23 @@
                         <li data-target="#FFICarousel" data-slide-to="1"></li>
                         <li data-target="#FFICarousel" data-slide-to="2"></li>
                         <li data-target="#FFICarousel" data-slide-to="3"></li>
-                        <li data-target="#FFICarousel" data-slide-to="4"></li>
                     </ol>
                     <div class="carousel-inner">
                         <div class="item active">
                             <img src="./styles/images/HIresImagesFirstFinance/shutterstock_208217650.jpg" alt="First slide" class="picture" width="305">
-                            <div class="carousel-caption">
-                                <h3>First Finance Institute</h3>
-                                <p>"<em>We deliver innovative online-based education programs"</em></p>
-                            </div>
                         </div>
                         <div class="item">
                             <img src="./styles/images/HIresImagesFirstFinance/shutterstock_237354595.jpg" alt="Second slide" class="picture" width="305">
                         </div>
                         <div class="item">
                             <img src="./styles/images/HIresImagesFirstFinance/shutterstock_147963821.jpg" alt="Third slide" class="picture" width="310">
+                        </div>
+                        <div class="item">
+                            <img src="./styles/images/HIresImagesFirstFinance/shutterstock_155818535.jpg" alt="Fourth slide" class="picture" width="330">
+                        </div>
+                        <div class="carousel-caption">
+                            <h3>First Finance Institute</h3>
+                            <p><em>"We deliver innovative online-based education programs"</em></p>
                         </div>
                     </div>
                     <a class="left carousel-control" href="#FFICarousel" data-role="button" data-slide="prev">
